# tidb-testing

./: .gitignore  README.md  tirelease
archive/: process_utf_es_result.py  scan_table_kv.py
archive/rocksdb-overlap/: ctc.yaml  iochaos.yaml  sysbench-config
archive/system-testing/: README.md
easy/: README.md  go.mod  go.sum
hack/: ctc.yaml  partition-one-tikv.yaml  random-partition-one-every-hour.yaml  tikv-dockerfile  tiup-localhost-topo-1pd1kv1db.yaml  tiup-localhost-topo-1pd3kv1db.yaml
ops/ansible/: .gitignore  README.md  ansible.cfg  create_user.yaml  deploy_ntp.yaml  deploy_pubkey.yaml  dir_permission.yaml  disk.yaml  hosts.ini.example  remove_service.yaml  show_numa_info.yaml  sysinfo.yaml  tuning_kernel_parameters.yaml  update_password.yaml
rocksdb-overlap/: i_generation.c
system-testing/: .env  README.md  SOURCEME.sh  pipeline-systesting.yaml  pipelinerun.yaml  sa.yaml  task-ops-resources.yaml  task-sleep.yaml  task-workload.yaml  taskrun.yaml  test.sql
system-testing/examples/: tct.yaml
system-testing/hack/: bash_prompt.sh
system-testing/pipelines/: pipeline--1pd1db3kv.yaml  pipeline--upgrade-test.yaml  pipeline-systesting.yaml
testbed/: tikv-standard.yaml
tilo/: .gitignore  pyproject.toml
tilo/cases/: test_7444.py
tilo/tests/: test_7386.py  test_7444.py  test_real_7386.py
tilo/tests/codec/: test_tikv.py
tilo/tilo/: clients.py
tilo/tilo/codec/: bytes_.py  excs.py  number.py  tidb.py  tikv.py
tipocket/: .env  Dockerfile  clean_resource.sh  tail.sh
tipocket-ctl/: .gitignore  README.md  setup.py
txn-test/: main.go
(+67 files in other folders)
