[tool.poetry]
name = "tilo"
version = "0.1.0"
description = ""
authors = ["cosven <yinshaowen241@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.0"
structlog = "^20.1.0"
PyMySQL = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
